--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     Type a car model in the box ie: Honda.
 <input type="text" id='box' >
 <br>
-<img id='done' src='http://www.clker.com/cliparts/v/c/G/q/s/h/done-button-png-hi.png'/>
+<img id='done' src='assets\images/done.jpg'/>
 <!-- <button id='done'>Done</button> -->
 </div>
 
