--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </title>
    
     <link rel="stylesheet" href="assets/css/style.css" />
-    
+    ``````
    
 
 </head>
@@ -25,7 +25,7 @@
 
 
 <div id='input'>
-    Type a car model in the box ie: Honda.
+    Type a car manufacturer in the box ie: honda note: lowercase only.
 <input type="text" id='box' >
 <br>
 <img id='done' src='assets\images/done.jpg'/>
